--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -47,7 +47,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -62,52 +62,62 @@
         <span class="title">Articles</span>
     </div>
     <ul id="articleList" data-role="listview" data-divider-theme="b" class="list">
-        <li data-theme="c">
+        <li data-theme="c" class="vi-bullet">
+            <a href="#v1" data-transition="slide">
+                Cardinal Health's Chairman & CEO George Barrett on Board Leadership
+            </a>
+        </li>
+        <li data-theme="c" class="vi-bullet">
+            <a href="#v2" data-transition="slide">
+                George Barrett, Cardinal Health's Chairman and CEO, discusses splitting the roles, the board's role in innovation and healthcare companies leading by example.
+            </a>
+        </li>
+        <li data-theme="c" class="ar-bullet">
             <a href="#a1" data-transition="slide">
                 World of CEOs – George Barrett
             </a>
         </li>
-        <li data-theme="c">
+        <li data-theme="c" class="ar-bullet">
             <a href="#a2" data-transition="slide">
                 Cardinal Health CEO George Barrett not sounding wounded over Walgreens walking
             </a>
         </li>
-        <li data-theme="c">
+        <li data-theme="c" class="ar-bullet">
             <a href="#a3" data-transition="slide">
                 George S. Barrett (Cardinal Health) in "the Corner Office”
             </a>
         </li>
-        <li data-theme="c">
+        <li data-theme="c" class="ar-bullet">
             <a href="#a4" data-transition="slide">
                 Team Insights? Just Use Your Peripheral Vision
             </a>
         </li>
-        <li data-theme="c">
+        <li data-theme="c" class="ar-bullet">
             <a href="#a5" data-transition="slide">
                 Statement of Chairman and CEO George Barrett Fortune 21 Cardinal Health Regarding Fiscal Cliff
             </a>
         </li>
-        <li data-theme="c">
+        <li data-theme="c" class="ar-bullet">
             <a href="#a6" data-transition="slide">
                 Shattering the Ceiling
             </a>
         </li>
-        <li data-theme="c">
+        <li data-theme="c" class="ar-bullet">
             <a href="#a7" data-transition="slide">
                 Cardinal Health's CEO uses background to think outside the box
             </a>
         </li>
-        <li data-theme="c">
+        <li data-theme="c" class="ar-bullet">
             <a href="#a8" data-transition="slide">
                 Cardinal Health Is Buying Large Medical Supplier for $2 Billion
             </a>
         </li>
-        <li data-theme="c">
+        <li data-theme="c" class="ar-bullet">
             <a href="#a9" data-transition="slide">
                 Profile: George Barrett ’73, CEO of Cardinal Health
             </a>
         </li>
-        <li data-theme="c">
+        <li data-theme="c" class="ar-bullet">
             <a href="#a11" data-transition="slide">
                 Cardinal CEO George Barrett: ‘Navigating’ amid health-care storm
             </a>
@@ -131,12 +141,48 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
             </ul>
         </div>
+    </div>
+</div>
+
+<!--v1-->
+<div data-role="page" id="v1">
+    <a class="back arrow" href='#articles' data-transition="slide">
+        Back
+    </a>
+    <img class="gb-ct-img" src="img/gb-image.png" alt="image"/>
+    <div class="d-title">
+        Cardinal Health's Chairman & CEO George Barrett on Board Leadership
+    </div>
+    <div class="a-body">
+        <video width="480" controls>
+            <source src="movie.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+</div>
+
+<!--v2-->
+<div data-role="page" id="v2">
+    <a class="back arrow" href='#articles' data-transition="slide">
+        Back
+    </a>
+    <img class="gb-ct-img" src="img/gb-image.png" alt="image"/>
+    <div class="d-title">
+        George Barrett, Cardinal Health's Chairman and CEO, discusses splitting the roles, the board's role in innovation and healthcare companies leading by example.
+    </div>
+    <div class="a-body">
+        <video width="480" controls>
+            <source src="movie.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+        </video>
     </div>
 </div>
 
@@ -192,7 +238,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -242,7 +288,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -318,7 +364,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -444,7 +490,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -493,7 +539,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -607,7 +653,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -764,7 +810,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -823,7 +869,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -937,7 +983,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -1016,7 +1062,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -1030,6 +1076,9 @@
     <div class="page-title">
         <span class="title">Tweets</span>
     </div>
+    <a class="right" href='javascript:getTweets();'>
+        Refresh
+    </a>
     <div id="tweetList" class="list">
         
     </div>
@@ -1050,7 +1099,7 @@
                 </li>
                 <li>
                     <a href="#videos" data-transition="slide" class="bar-style">
-                      <img class="bag-icon" src="img/play.png"/>
+                      <img class="bag-icon" src="img/twitter.png"/>
                         Tweets
                     </a>
                 </li>
@@ -1066,20 +1115,26 @@
         }
     });
 
-    var twitterAPI = "http://localhost:2014/data/getdata?type=SearchTweets&q='George Barrett'&hashTag=colo";
-    $.getJSON( twitterAPI, {
-        format: "json"
-    }).done(function( data ) {
-        var tweets = JSON.parse(data.Error);
-        //console.log(tweets);
-        for(var i = 0; i < tweets.statuses.length; i++) {
-            $('#tweetList').append(
-                "<div class='tbg'>"
-                    + "<img style='float:left' src='" + tweets.statuses[i].user.profile_image_url + "'/>"
-                    + "<div class='tweet'>" + tweets.statuses[i].text + "</div><div style='clear:both'></div>"
-                +"</div>");
-        }
-    });
+    function getTweets() {
+        $("#tweetList").html("");
+        //var twitterAPI = "http://localhost:2014/data/getdata?type=SearchTweets&q='George Barrett'";
+        var twitterAPI = "http://54.215.134.149:8080/data/getdata?type=SearchTweets&q='George Barrett'";
+        $.getJSON( twitterAPI, {
+            format: "json"
+        }).done(function( data ) {
+            console.log(data);
+            var tweets = JSON.parse(data.Error);
+            for(var i = 0; i < tweets.statuses.length; i++) {
+                $('#tweetList').append(
+                    "<div class='tbg'>"
+                        + "<img style='float:left' src='" + tweets.statuses[i].user.profile_image_url + "'/>"
+                        + "<div class='tweet'>" + tweets.statuses[i].text + "</div><div style='clear:both'></div>"
+                    +"</div>");
+            }
+        });
+    }
+
+    getTweets();
 </script>
 </body>
 </html>
