--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1074,7 +1074,7 @@
 <!-- Tweets -->
 <div data-role="page" id="videos">
     <div class="page-title">
-        <span class="title">Tweets</span>
+        <span class="title" style="margin-left:15%">Tweets</span>
         <a class="right" href='javascript:getTweets();'>
             Refresh
         </a>
