--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -64,62 +64,74 @@
     <ul id="articleList" data-role="listview" data-divider-theme="b" class="list">
         <li data-theme="c" class="vi-bullet">
             <a href="#v1" data-transition="slide">
-                Cardinal Health's Chairman & CEO George Barrett on Board Leadership
+                <div class="source">New York Times</div><div class="ar-date">Jan 16, 2013</div><br/>
+                <div class="ar-title">Cardinal Health's Chairman & CEO George Barrett on Board Leadership</div>
             </a>
         </li>
         <li data-theme="c" class="vi-bullet">
             <a href="#v2" data-transition="slide">
-                George Barrett, Cardinal Health's Chairman and CEO, discusses splitting the roles, the board's role in innovation and healthcare companies leading by example.
-            </a>
-        </li>
-        <li data-theme="c" class="ar-bullet">
-            <a href="#a1" data-transition="slide">
-                World of CEOs – George Barrett
-            </a>
-        </li>
-        <li data-theme="c" class="ar-bullet">
-            <a href="#a2" data-transition="slide">
-                Cardinal Health CEO George Barrett not sounding wounded over Walgreens walking
-            </a>
-        </li>
-        <li data-theme="c" class="ar-bullet">
-            <a href="#a3" data-transition="slide">
-                George S. Barrett (Cardinal Health) in "the Corner Office”
-            </a>
-        </li>
-        <li data-theme="c" class="ar-bullet">
-            <a href="#a4" data-transition="slide">
-                Team Insights? Just Use Your Peripheral Vision
-            </a>
-        </li>
-        <li data-theme="c" class="ar-bullet">
-            <a href="#a5" data-transition="slide">
-                Statement of Chairman and CEO George Barrett Fortune 21 Cardinal Health Regarding Fiscal Cliff
-            </a>
-        </li>
-        <li data-theme="c" class="ar-bullet">
-            <a href="#a6" data-transition="slide">
-                Shattering the Ceiling
+                <div class="source">New York Times</div><div class="ar-date">Jan 16, 2013</div><br/>
+                <div class="ar-title">George Barrett, Cardinal Health's Chairman and CEO, discusses splitting the roles, the board's role in innovation and healthcare companies leading by example.</div>
             </a>
         </li>
         <li data-theme="c" class="ar-bullet">
             <a href="#a7" data-transition="slide">
-                Cardinal Health's CEO uses background to think outside the box
-            </a>
-        </li>
-        <li data-theme="c" class="ar-bullet">
-            <a href="#a8" data-transition="slide">
-                Cardinal Health Is Buying Large Medical Supplier for $2 Billion
-            </a>
-        </li>
-        <li data-theme="c" class="ar-bullet">
-            <a href="#a9" data-transition="slide">
-                Profile: George Barrett ’73, CEO of Cardinal Health
+                <div class="source">The Columbus Dispatch</div><div class="ar-date">May 19, 2013</div><br/>
+                <div class="ar-title">Cardinal Health's CEO uses background to think outside the box</div>
             </a>
         </li>
         <li data-theme="c" class="ar-bullet">
             <a href="#a11" data-transition="slide">
-                Cardinal CEO George Barrett: ‘Navigating’ amid health-care storm
+                <div class="source">Columbus C.E.O</div><div class="ar-date">Nov 17, 2013</div><br/>
+                <div class="ar-title">Cardinal CEO George Barrett: ‘Navigating’ amid health-care storm</div>
+            </a>
+        </li>
+        <li data-theme="c" class="ar-bullet">
+            <a href="#a2" data-transition="slide">
+                <div class="source">Columbus Biz Insider</div><div class="ar-date">May 02, 2013</div><br/>
+                <div class="ar-title">Cardinal Health CEO George Barrett not sounding wounded over Walgreens walking</div>
+            </a>
+        </li>
+        <li data-theme="c" class="ar-bullet">
+            <a href="#a6" data-transition="slide">
+                <div class="source">Columbus C.E.O</div><div class="ar-date">Apr 2013</div><br/>
+                <div class="ar-title">Shattering the Ceiling</div>
+            </a>
+        </li>
+        <li data-theme="c" class="ar-bullet">
+            <a href="#a8" data-transition="slide">
+                <div class="source">dealbook.nytimes.com</div><div class="ar-date">Feb 14, 2013</div><br/>
+                <div class="ar-title">Cardinal Health Is Buying Large Medical Supplier for $2 Billion</div>
+            </a>
+        </li>
+        <li data-theme="c" class="ar-bullet">
+            <a href="#a1" data-transition="slide">
+                <div class="source">New York Times</div><div class="ar-date">Jan 16, 2013</div><br/>
+                <div class="ar-title">World of CEOs – George Barrett</div>
+            </a>
+        </li>
+        <li data-theme="c" class="ar-bullet">
+            <a href="#a5" data-transition="slide">
+                <div class="source">Cardinal Health</div><div class="ar-date">Dec 10, 2012</div><br/>
+                <div class="ar-title">Statement of Chairman and CEO George Barrett Fortune 21 Cardinal Health Regarding Fiscal Cliff</div>
+            </a>
+        </li>
+        <li data-theme="c" class="ar-bullet">
+            <a href="#a3" data-transition="slide">
+                <div class="source">Examiner.com</div><div class="ar-date">Aug 21, 2010</div><br/>
+                <div class="ar-title">George S. Barrett (Cardinal Health) in "the Corner Office”</div>
+            </a>
+        </li>        
+        <li data-theme="c" class="ar-bullet">
+            <a href="#a9" data-transition="slide">
+                <div class="source">staplessoccer.wordpress.com</div><div class="ar-date">Aug 15, 2010</div><br/>
+                <div class="ar-title">Profile: George Barrett ’73, CEO of Cardinal Health</div>
+            </a>
+        </li>
+        <li data-theme="c" class="ar-bullet">
+            <a href="#a4" data-transition="slide">
+                <div class="source">New York Times</div><div class="ar-date">Aug 14, 2010</div><br/>
+                <div class="ar-title">Team Insights? Just Use Your Peripheral Vision</div>
             </a>
         </li>
     </ul>
@@ -304,7 +316,7 @@
     </a>
     <img class="gb-ct-img" src="img/gb-image.png" alt="image"/>
     <div class="d-title">
-        George S. Barrett (Cardinal Health) in "the Corner Office
+        George S. Barrett (Cardinal Health) in "the Corner Office"
     </div>
     <div class="a-body">
       <div>Adam Bryant conducts interviews of senior-level executives that appear in his “Corner Office” column each week in the SundayBusiness section of The New York Times. Here are a few insights provided during an interview of George S. Barrett, chairman and chief executive of Cardinal Health, a health care services company. To read the complete interview and the interviews of other executives.</div><br/>
@@ -1043,7 +1055,7 @@
       <div class="gray-header">Published</div>
       <div>Nov 17, 2013</div>
       <div class="gray-header">Sources</div>
-      <div>Kitty McConnell</div><div>Columbus CEO magazine</div>
+      <div>Kitty McConnell</div><div>Columbus C.E.O</div>
     </div>
     <div data-theme="a" data-role="footer" data-position="fixed">
         <div data-role="navbar" data-iconpos="top">
@@ -1127,14 +1139,21 @@
         $.getJSON( twitterAPI, {
             format: "json"
         }).done(function( data ) {
-            console.log(data);
             var tweets = JSON.parse(data.Error);
+            console.log(tweets);
             for(var i = 0; i < tweets.statuses.length; i++) {
-                $('#tweetList').append(
-                    "<div class='tbg'>"
-                        + "<img style='float:left' src='" + tweets.statuses[i].user.profile_image_url + "'/>"
-                        + "<div class='tweet'>" + tweets.statuses[i].text + "</div><div style='clear:both'></div>"
-                    +"</div>");
+
+                var pp = Date.parse(tweets.statuses[i].created_at);
+                var newDate = new Date(pp);
+                //if(tweets.statuses[i].retweeted_status){
+                    $('#tweetList').append(
+                        "<div class='tbg'>"
+                            + "<img class='t-img' src='" + tweets.statuses[i].user.profile_image_url + "'/>"
+                            + "<div class='user'>" + tweets.statuses[i].user.name + "</div>"
+                            + "<div class='t-date'>" + newDate.getDate() + " " + getMonthName(newDate.getMonth()) + "</div>"
+                            + "<div class='tweet'>" + tweets.statuses[i].text + "</div><div style='clear:both'></div>"
+                        +"</div>");
+                //}
             }
 
             $("#loader").css("visibility","hidden");
@@ -1142,6 +1161,15 @@
     }
 
     getTweets();
+
+    function getMonthName(month){
+        var months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
+        for(var i=0; i< months.length; i++){
+            if(i == month){
+                return months[i];
+            }
+        }
+    }
 </script>
 </body>
 </html>
