--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1131,6 +1131,14 @@
         }
     });
 
+    $(window).bind("orientationchange", function(){
+        var orientation = window.orientation;
+        var new_orientation = (orientation) ? 0 : 180 + orientation;
+        $('body').css({
+            "-webkit-transform": "rotate(" + new_orientation + "deg)"
+        });
+    });
+    
     function getTweets() {
         $("#tweetList").html("");
         $("#loader").css("visibility","visible");
