--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -27,7 +27,7 @@
             George Barrett
         </div>
         <div class="gb-job">
-          CEO, Cardinal Health - World of CEOs
+          CEO, Cardinal Health
         </div>
     </div>
     <div data-theme="a" data-role="footer" data-position="fixed">
@@ -1088,7 +1088,7 @@
     <div class="page-title">
         <span class="title" style="margin-left:15%">Tweets</span>
         <a class="right" href='javascript:getTweets();'>
-            Refresh
+            <img src="img/refresh.png" style="width:30px"/>
         </a>
     </div>
     <div id="tweetList" class="list">
