--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -6,7 +6,6 @@
   <title></title>
   
   <link rel="stylesheet" href="css/jquery.mobile-1.3.2.css">
-  <link rel="stylesheet" href="css/mediaelementplayer.min.css" />
 
   <!-- Extra Codiqa features -->
   <link rel="stylesheet" href="css/gs.css">
@@ -14,7 +13,6 @@
   <!-- jQuery and jQuery Mobile -->
   <script src="js/jquery-1.9.1.min.js"></script>
   <script src="js/jquery.mobile-1.3.2.min.js"></script>
-  <script src="js/mediaelement-and-player.min.js"></script>
 </head>
 <body>
 <!-- Home -->
@@ -63,17 +61,12 @@
     </div>
     <ul id="articleList" data-role="listview" data-divider-theme="b" class="list">
         <li data-theme="c" class="vi-bullet">
-            <a href="#v1" data-transition="slide">
-                <div class="source">New York Times</div><div class="ar-date">Jan 16, 2013</div><br/>
+            <a href="#v1" data-transition="slide" onclick="playSelectedVideo('video1')">
+                <div class="source">Russell Reynolds Associates</div><div class="ar-date">Jan 16, 2013</div><br/>
                 <div class="ar-title">Cardinal Health's Chairman & CEO George Barrett on Board Leadership</div>
             </a>
         </li>
-        <li data-theme="c" class="vi-bullet">
-            <a href="#v2" data-transition="slide">
-                <div class="source">New York Times</div><div class="ar-date">Jan 16, 2013</div><br/>
-                <div class="ar-title">George Barrett, Cardinal Health's Chairman and CEO, discusses splitting the roles, the board's role in innovation and healthcare companies leading by example.</div>
-            </a>
-        </li>
+        
         <li data-theme="c" class="ar-bullet">
             <a href="#a7" data-transition="slide">
                 <div class="source">The Columbus Dispatch</div><div class="ar-date">May 19, 2013</div><br/>
@@ -164,7 +157,7 @@
 
 <!--v1-->
 <div data-role="page" id="v1">
-    <a class="back arrow" href='#articles' data-transition="slide">
+    <a class="back arrow" href='#articles' data-transition="slide" onclick="stopCurrentVideo();">
         Back
     </a>
     <img class="gb-ct-img" src="img/gb-image.png" alt="image"/>
@@ -172,27 +165,8 @@
         Cardinal Health's Chairman & CEO George Barrett on Board Leadership
     </div>
     <div class="a-body">
-        <video width="480" controls>
-            <source src="movie.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-</div>
-
-<!--v2-->
-<div data-role="page" id="v2">
-    <a class="back arrow" href='#articles' data-transition="slide">
-        Back
-    </a>
-    <img class="gb-ct-img" src="img/gb-image.png" alt="image"/>
-    <div class="d-title">
-        George Barrett, Cardinal Health's Chairman and CEO, discusses splitting the roles, the board's role in innovation and healthcare companies leading by example.
-    </div>
-    <div class="a-body">
-        <video width="480" controls>
-            <source src="movie.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
+        <video id="video1" style="width:98%" controls>
+            <source src="http://54.215.134.149:8080/file/getFile/g1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -1125,11 +1099,21 @@
 </div>
 
 <script>
-    $('video').mediaelementplayer({
-        success: function(media, node, player) {
-            $('#' + node.id + '-mode').html('mode: ' + media.pluginType);
+    currentVideoId = "";
+    function playSelectedVideo(id){
+        currentVideoId = id;
+        var video = document.getElementById(id);
+        if (video.paused) {
+            video.play();
+        } else {
+            video.pause();
         }
-    });
+    }
+
+    function stopCurrentVideo() {
+        var video = document.getElementById(currentVideoId);
+        video.pause();
+    }
 
     function getTweets() {
         $("#tweetList").html("");
