--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -165,7 +165,7 @@
         Cardinal Health's Chairman & CEO George Barrett on Board Leadership
     </div>
     <div class="a-body">
-        <video id="video1" style="width:98%" controls>
+        <video id="video1" style="width:420px" controls>
             <source src="http://54.215.134.149:8080/file/getFile/g1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
