--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1154,6 +1154,20 @@
             }
         }
     }
+
+    var getFavicon = function(){
+        var favicon = undefined;
+        var nodeList = document.getElementsByTagName("link");
+        for (var i = 0; i < nodeList.length; i++)
+        {
+            if((nodeList[i].getAttribute("rel") == "icon")||(nodeList[i].getAttribute("rel") == "shortcut icon"))
+            {
+                favicon = nodeList[i].getAttribute("href");
+            }
+        }
+        return favicon;        
+    }
+
 </script>
 </body>
 </html>
