--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
   
-  <link rel="stylesheet" href="css/jquery.mobile-1.3.2.css">
+    <link rel="stylesheet" href="css/jquery.mobile-1.3.2.css">
 
-  <!-- Extra Codiqa features -->
-  <link rel="stylesheet" href="css/gs.css">
+    <link rel="stylesheet" href="css/gs.css">
   
-  <!-- jQuery and jQuery Mobile -->
-  <script src="js/jquery-1.9.1.min.js"></script>
-  <script src="js/jquery.mobile-1.3.2.min.js"></script>
+    <script src="js/jquery-1.9.1.min.js"></script>
+    <script src="js/jquery.mobile-1.3.2.min.js"></script>
 </head>
 <body>
 <!-- Home -->
@@ -27,6 +25,76 @@
         <div class="gb-job">
           CEO, Cardinal Health
         </div>
+
+        <ul id="news" class="hlist">
+            <li style="z-index: 3; position: absolute; display: block;">
+                <a href="#v1" data-transition="slide" onclick="playSelectedVideo('video1')">
+                    <div class="source">Russell Reynolds Associates</div><br/>
+                    <div class="ar-title">Cardinal Health's Chairman & CEO George Barrett on Board Leadership</div>
+                </a>
+            </li>
+        
+            <li style="z-index: 3; position: absolute; display: none;">
+                <a href="#a7" data-transition="slide">
+                    <div class="source">The Columbus Dispatch</div><br/>
+                    <div class="ar-title">Cardinal Health's CEO uses background to think outside the box</div>
+                </a>
+            </li>
+            <li style="z-index: 2; position: absolute; display: none;">
+                <a href="#a11" data-transition="slide">
+                    <div class="source">Columbus C.E.O</div><br/>
+                    <div class="ar-title">Cardinal CEO George Barrett: ‘Navigating’ amid health-care storm</div>
+                </a>
+            </li>
+            <li style="z-index: 2; position: absolute; display: none;">
+                <a href="#a2" data-transition="slide">
+                    <div class="source">Columbus Biz Insider</div><br/>
+                    <div class="ar-title">Cardinal Health CEO George Barrett not sounding wounded over Walgreens walking</div>
+                </a>
+            </li>
+            <li style="z-index: 2; position: absolute; display: none;">
+                <a href="#a6" data-transition="slide">
+                    <div class="source">Columbus C.E.O</div><br/>
+                    <div class="ar-title">Shattering the Ceiling</div>
+                </a>
+            </li>
+            <li style="z-index: 2; position: absolute; display: none;">
+                <a href="#a8" data-transition="slide">
+                    <div class="source">dealbook.nytimes.com</div><br/>
+                    <div class="ar-title">Cardinal Health Is Buying Large Medical Supplier for $2 Billion</div>
+                </a>
+            </li>
+            <li style="z-index: 2; position: absolute; display: none;">
+                <a href="#a1" data-transition="slide">
+                    <div class="source">New York Times</div><br/>
+                    <div class="ar-title">World of CEOs – George Barrett</div>
+                </a>
+            </li>
+            <li style="z-index: 2; position: absolute; display: none;">
+                <a href="#a5" data-transition="slide">
+                    <div class="source">Cardinal Health</div><br/>
+                    <div class="ar-title">Statement of Chairman and CEO George Barrett Fortune 21 Cardinal Health Regarding Fiscal Cliff</div>
+                </a>
+            </li>
+            <li style="z-index: 2; position: absolute; display: none;">
+                <a href="#a3" data-transition="slide">
+                    <div class="source">Examiner.com</div><br/>
+                    <div class="ar-title">George S. Barrett (Cardinal Health) in "the Corner Office”</div>
+                </a>
+            </li>        
+            <li style="z-index: 2; position: absolute; display: none;">
+                <a href="#a9" data-transition="slide">
+                    <div class="source">staplessoccer.wordpress.com</div><br/>
+                    <div class="ar-title">Profile: George Barrett ’73, CEO of Cardinal Health</div>
+                </a>
+            </li>
+            <li style="z-index: 2; position: absolute; display: none;">
+                <a href="#a4" data-transition="slide">
+                    <div class="source">New York Times</div><br/>
+                    <div class="ar-title">Team Insights? Just Use Your Peripheral Vision</div>
+                </a>
+            </li>
+        </ul>
     </div>
     <div data-theme="a" data-role="footer" data-position="fixed">
         <div data-role="navbar" data-iconpos="top" class="bar-style">
@@ -1124,7 +1192,6 @@
             format: "json"
         }).done(function( data ) {
             var tweets = JSON.parse(data.Error);
-            console.log(tweets);
             for(var i = 0; i < tweets.statuses.length; i++) {
 
                 var pp = Date.parse(tweets.statuses[i].created_at);
@@ -1169,5 +1236,21 @@
     }
 
 </script>
+
+    <script>
+        var tid = setInterval(mycode, 5000);
+        var totalEl = $('#news').children().length;
+        var currentEl = 0;
+        function mycode() {
+            if(currentEl < totalEl - 1)
+                currentEl += 1;
+            else
+                currentEl = 0;
+
+            $('#news').children().slideUp( "slow", function() {
+                $('#news').children().eq(currentEl).fadeIn("slow");
+            });
+        }        
+    </script>
 </body>
 </html>
